@@ -91,6 +91,8 @@ hd_transition_rotation_will_change_state (void);
 gboolean
 hd_transition_is_rotating (void);
 gboolean
+hd_transition_is_rotating_to_portrait (void);
+gboolean
 hd_transition_rotate_ignore_damage(void);
 
 gboolean
